; ModuleID = '/home/carl/AnghaBench/lwan/src/lib/extr_lwan-template.c_lwan_append_str_to_strbuf.c'
source_filename = "/home/carl/AnghaBench/lwan/src/lib/extr_lwan-template.c_lwan_append_str_to_strbuf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.lwan_strbuf = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @lwan_append_str_to_strbuf(%struct.lwan_strbuf* %0, i8* %1) #0 {
  %3 = alloca %struct.lwan_strbuf*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  store %struct.lwan_strbuf* %0, %struct.lwan_strbuf** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load i8*, i8** %4, align 8
  %7 = bitcast i8* %6 to i8**
  %8 = load i8*, i8** %7, align 8
  store i8* %8, i8** %5, align 8
  %9 = load i8*, i8** %5, align 8
  %10 = call i64 @LIKELY(i8* %9)
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %16

12:                                               ; preds = %2
  %13 = load %struct.lwan_strbuf*, %struct.lwan_strbuf** %3, align 8
  %14 = load i8*, i8** %5, align 8
  %15 = call i32 @lwan_strbuf_append_strz(%struct.lwan_strbuf* %13, i8* %14)
  br label %16

16:                                               ; preds = %12, %2
  ret void
}

declare dso_local i64 @LIKELY(i8*) #1

declare dso_local i32 @lwan_strbuf_append_strz(%struct.lwan_strbuf*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
